--- a/Messenger/App.config
+++ b/Messenger/App.config
@@ -13,11 +13,14 @@
         </providers>
       </entityFramework>
     <connectionStrings>
-	    <add name="ChatDBModel"
-          connectionString="data source=DESKTOP-FAOMLAU;&#xD;&#xA;						    initial catalog=Chat;&#xD;&#xA;						    integrated security=True;&#xD;&#xA;						    MultipleActiveResultSets=True;&#xD;&#xA;						    App=EntityFramework"
-
-          providerName="System.Data.SqlClient" />
-    </connectionStrings>
+    <add name="ChatDBModel" 
+		 connectionString="data source=DESKTOP-FAOMLAU;
+		 initial catalog=Chat;
+		 integrated security=True;
+		 MultipleActiveResultSets=True;
+		 App=EntityFramework" 
+		 providerName="System.Data.SqlClient" />
+	</connectionStrings>
 	
     <!--<system.serviceModel>
         <bindings />
@@ -50,9 +53,7 @@
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://localhost:8735/" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_IServiceChat" contract="ServiceReference1.IServiceChat"
-                name="NetTcpBinding_IServiceChat">
+            <endpoint address="net.tcp://localhost:8735/" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiceChat" contract="ServiceReference1.IServiceChat" name="NetTcpBinding_IServiceChat">
                 <identity>
                     <userPrincipalName value="DESKTOP-FAOMLAU\Lenovo" />
                 </identity>
