--- a/Messenger/App.config
+++ b/Messenger/App.config
@@ -13,14 +13,8 @@
         </providers>
       </entityFramework>
     <connectionStrings>
-    <add name="ChatDBModel" 
-		 connectionString="data source=DESKTOP-FAOMLAU;
-		 initial catalog=Chat;
-		 integrated security=True;
-		 MultipleActiveResultSets=True;
-		 App=EntityFramework" 
-		 providerName="System.Data.SqlClient" />
-	</connectionStrings>
+   
+	<add name="ChatDBModel" connectionString="data source=DESKTOP-FAOMLAU;initial catalog=Chat;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 	
     <!--<system.serviceModel>
         <bindings />
