--- a/Messenger/Messenger.csproj
+++ b/Messenger/Messenger.csproj
@@ -89,11 +89,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ChatDB\Chat.cs" />
     <Compile Include="ChatDB\ChatDBModel.cs" />
     <Compile Include="ChatDB\ChatUser.cs" />
     <Compile Include="ChatDB\Message.cs" />
-    <Compile Include="ChatDB\Party.cs" />
     <Compile Include="Connected Services\ServiceReference1\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -178,9 +176,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModel\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Page Include="UserControls\ChatList.xaml">
       <SubType>Designer</SubType>
@@ -283,9 +279,6 @@
       <Project>{c76949fe-d892-489a-8936-564dc2656031}</Project>
       <Name>WcfService</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="user.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\search.png" />
